--- a/docs/create/jenkins/index-jenkins.mdx
+++ b/docs/create/jenkins/index-jenkins.mdx
@@ -136,7 +136,7 @@ Congratulations! Jenkins is ready!
 
 ### Installing Python and custom libraries
 
-If you use an existing instance of Jenkins, you can install Python and the custom libraries from the command line interface of that machine.
+If you use an existing instance of Jenkins server, you can install Python and the custom libraries from the command line interface of that machine.
 
 Docker instances of Jenkins can be accessed by shell using the following command:
 
