--- a/docs/explore/redisinsight/profiler/index-profiler.mdx
+++ b/docs/explore/redisinsight/profiler/index-profiler.mdx
@@ -38,9 +38,21 @@ Visit [https://developer.redis.com/create/rediscloud](https://developer.redis.co
 ![alt_text](images/image1.png)
 
 
+You can use redis cli client to connect to the remote Redis Enterprise cloud database. You can check memory usage  via Redis INFO command.
+
+:::info TIP
+RedisInsight allows you to add Redis Sentinel database too. Refer  [this link ](https://docs.redis.com/latest/ri/using-redisinsight/add-instance/#add-a-redis-sentinel-database) to learn more
+:::
+
+
 ## Step 2: Download RedisInsight
 
+:::note TIP
+RedisInsight v2.0 is completely an open source visual tool that lets you do both GUI- and CLI-based interactions with your Redis database.
+It is completely an open source visual tool that lets you do both GUI- and CLI-based interactions with your Redis database . It is a desktop manager that provides an intuitive and efficient GUI for Redis, allowing you to interact with your databases, monitor, and manage your data.
 
+[Refer these tutorials](/explore/redisinsightv2/) to learn more about this latest release.
+:::
 To install RedisInsight on your local system, you need to first download the software from the Redis website.
 
 [Click this link ](https://redis.com/redis-enterprise/redis-insight/#insight-form) to access a form that allows you to select the operating system of your choice.
@@ -198,7 +210,7 @@ The complete walkthrough of this python script is explained [here](https://redis
 
 ## Step 4: Execute the sensor script
 
-Let us execute the script 
+Let us execute the script using the command line: 
 
 
 ```
@@ -302,9 +314,10 @@ Hence, the profiler provides the below statistical details:
 ## Additional Links
 
 - [Explore Redis keys using RedisInsight browser tool](/explore/redisinsight/browser)
-- [Memory Analysis using RedisInsight](/explore/redisinsight/memoryanalyzer)
+- [Memory Usage and Analysis using RedisInsight](/explore/redisinsight/memoryanalyzer)
 - [Using Redis Streams with RedisInsight](/explore/redisinsight/streams)
-
+- [RedisInsight Release Notes](https://docs.redis.com/latest/ri/release-notes/)
+- [Debug Redis using RedisInsight Slow log Debugging Tool](https://developer.redis.com/explore/redisinsight/slowlog)
 ##
 
 <div>
