--- a/docs/create/aws/chatapp/index-chatapp.mdx
+++ b/docs/create/aws/chatapp/index-chatapp.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-chatapp
-title: How to Build a Real Time Chat application on Amazon Web Service using Python and Redis
+title: How to Build a Real Time Chat application on Amazon Web Services using Python and Redis
 sidebar_label: Building a Real-Time Chat application on AWS using Python and Redis
 slug: /create/aws/chatapp
 authors: [ajeet]
