--- a/docs/create/aws/chatapp/index-chatapp.mdx
+++ b/docs/create/aws/chatapp/index-chatapp.mdx
@@ -6,7 +6,7 @@ slug: /create/aws/chatapp
 authors: [ajeet]
 ---
 
-Real time chat messaging apps are surging in popularity exponentially. Mobile apps like WhatsApp, Facebook, Telegram, Slack, Discord have become “a part and parcel” of our life. Users are addicted to these live chat mobile app conversation as they bring a personal touch and offer a real-time interaction
+Real time chat messaging apps are surging in popularity exponentially. Mobile apps like WhatsApp, Facebook, Telegram, Slack, Discord have become “a part and parcel” of our life. Users are addicted to these live chat mobile app conversations as they bring a personal touch and offer a real-time interaction
 
 ![chatapp](image_chatapp1.png)
 
