--- a/docs/create/aws/chatapp/index-chatapp.mdx
+++ b/docs/create/aws/chatapp/index-chatapp.mdx
@@ -38,7 +38,7 @@ In this tutorial, we will see how to build a realtime chat app built with Flask,
 ### Step 1. Sign up for a Free Redis Enterprise Cloud Account
 
 [Follow this tutorial](https://developer.redis.com/create/aws/redis-on-aws) to sign up for a free Redis Enterprise Cloud account.
-If you already have an existing account, then all you need is an authentication detail to access your subscription.
+If you already have an existing account, then all you need are your login credentials to access your subscription.
 
 ![image](chatapp3.png)
 
