--- a/docs/create/aws/chatapp/index-chatapp.mdx
+++ b/docs/create/aws/chatapp/index-chatapp.mdx
@@ -42,7 +42,7 @@ If you already have an existing account, then all you need are your login creden
 
 ![image](chatapp3.png)
 
-Choose AWS as a Cloud vendor while creating your new subscription. While creating a new database, ensure that you add your own password for the authentication. At the end of the database creation process, you will get a Redis Enterprise Cloud database endpoint and password. You can save it for later use.
+Choose AWS as the Cloud vendor while creating your new subscription. While creating a new database, ensure that you set your own password. At the end of the database creation process, you will get a Redis Enterprise Cloud database endpoint and port. Save these, you will need them later.
 
 ![image](chatapp4.png)
 
