--- a/docs/explore/redisinsight/profiler/index-profiler.mdx
+++ b/docs/explore/redisinsight/profiler/index-profiler.mdx
@@ -51,7 +51,7 @@ RedisInsight allows you to add Redis Sentinel database too. Refer  [this link ](
 RedisInsight v2.0 is an open source visual tool that lets you do both GUI- and CLI-based interactions with your Redis database.
 It is an open source visual tool that lets you do both GUI- and CLI-based interactions with your Redis database . It is a desktop manager that provides an intuitive and efficient GUI for Redis, allowing you to interact with your databases, monitor, and manage your data.
 
-[Refer these tutorials](/explore/redisinsightv2/) to learn more about this latest release.
+[Refer to these tutorials](/explore/redisinsightv2/) to learn more about this latest release.
 :::
 To install RedisInsight on your local system, you need to first download the software from the Redis website.
 
