--- a/docs/explore/redisinsight/profiler/index-profiler.mdx
+++ b/docs/explore/redisinsight/profiler/index-profiler.mdx
@@ -41,7 +41,7 @@ Visit [https://developer.redis.com/create/rediscloud](https://developer.redis.co
 You can use redis cli client to connect to the remote Redis Enterprise cloud database. You can check memory usage  via Redis INFO command.
 
 :::info TIP
-RedisInsight allows you to add Redis Sentinel database too. Refer  [this link ](https://docs.redis.com/latest/ri/using-redisinsight/add-instance/#add-a-redis-sentinel-database) to learn more
+RedisInsight allows you to add a Redis Sentinel database too. Refer to the [documentation](https://docs.redis.com/latest/ri/using-redisinsight/add-instance/#add-a-redis-sentinel-database) to learn more.
 :::
 
 
