--- a/docs/create/aws/chatapp/index-chatapp.mdx
+++ b/docs/create/aws/chatapp/index-chatapp.mdx
@@ -23,7 +23,7 @@ There’s been a rise in the number of social media apps that bring social eleme
 
 ### 1. What will you build?
 
-In this tutorial, we will see how to build a realtime chat app built with Flask, Socket.IO and Redis Enterprise Cloud running on Amazon Web Service. This example uses pub/sub features combined with web-sockets for implementing the message communication between client and server.
+In this tutorial, we will see how to build a realtime chat app built with Flask, Socket.IO and Redis Enterprise Cloud running on Amazon Web Services. This example uses pub/sub features combined with web-sockets for implementing the message communication between client and server.
 
 ![image](chatapp2.png)
 
