--- a/docs/create/aws/chatapp/index-chatapp.mdx
+++ b/docs/create/aws/chatapp/index-chatapp.mdx
@@ -114,7 +114,7 @@ python3 app.py
 
 ![Chatapp](chatapp_homepage.png)
 
-### Step 7. How it works?
+### Step 7. How does it work?
 
 
 The chat app server works as a basic REST API which involves keeping the session and handling the user state in the chat rooms (besides the WebSocket/real-time part).
