Adds “Getting started with Redis Functions”

--- a/docs/create/index-create.mdx
+++ b/docs/create/index-create.mdx
@@ -15,7 +15,7 @@ The following quick starts shows various ways of how to get started and create a
 <div class="row">
   <div class="col">
      <RedisCard
-        title="Redis Stack"
+        title="Redis Stackkkk"
         description="Create database using Redis Stack"
         page="/create/redis-stack"
         />
