Add redis functions to “create” section index

--- a/docs/create/index-create.mdx
+++ b/docs/create/index-create.mdx
@@ -15,9 +15,18 @@ The following quick starts shows various ways of how to get started and create a
 <div class="row">
   <div class="col">
      <RedisCard
-        title="Redis Stackkkk"
+        title="Redis Stack"
         description="Create database using Redis Stack"
         page="/create/redis-stack"
+        />
+ </div>
+
+
+  <div class="col">
+     <RedisCard
+        title="Redis Functions"
+        description="Getting started with Redis Functions"
+        page="/create/redis-functions"
         />
  </div>
 
