Added link to Discord.

--- a/docs/operate/redis-at-scale/index-redis-at-scale.mdx
+++ b/docs/operate/redis-at-scale/index-redis-at-scale.mdx
@@ -23,7 +23,7 @@ Scaling means more than just performance. We have tried to identify key topics t
 - Scalability: scaling Redis for both higher throughput and capacity.
 - Observability: Visibility into your Redis deployment (metrics, etc.).
 
-Our goal is to give you all the information you need to run Redis at scale, in whichever way is best for your organization. We hope you enjoy the course, and please don't hesitate to reach out on the course Discord channel if you have any questions along the way.
+Our goal is to give you all the information you need to run Redis at scale, in whichever way is best for your organization. We hope you enjoy the course, and please don't hesitate to reach out on the course [Discord channel](https://discord.gg/ZnjZbDMDub) if you have any questions along the way.
 
 ## Prerequisites
 
