--- a/docs/operate/redis-at-scale/talking-to-redis/client-performance-improvements/index-client-performance-improvements.mdx
+++ b/docs/operate/redis-at-scale/talking-to-redis/client-performance-improvements/index-client-performance-improvements.mdx
@@ -28,5 +28,5 @@ This technique is called pipelining and is another good way to improve the perfo
 
 Supplemental Reading:
 - [Redis Pipelining](https://redis.io/topics/pipelining)
-- [Redis Clients Handling](https://redis.io/topics/clients) 
+- [Redis Client Handling](https://redis.io/topics/clients) 
 - [Connection Pools for Serverless Functions and Backend Services](https://redislabs.com/blog/connection-pools-for-serverless-functions-and-backend-services/)
