--- a/docs/operate/redis-at-scale/scalability/redis-cluster-and-client-libraries/index-redis-cluster-and-client-libraries.mdx
+++ b/docs/operate/redis-at-scale/scalability/redis-cluster-and-client-libraries/index-redis-cluster-and-client-libraries.mdx
@@ -35,7 +35,7 @@ Examples of clients that support Redis cluster:
 - Java: Jedis, Lettuce
 - .NET: StackExchange.Redis
 - Go: Radix, go-redis/redis
-- Node.js: ioredis
+- Node.js: node-redis, ioredis
 - Python: redis-py
 
 Here's a list of Redis Clients: [https://redis.io/clients](https://redis.io/clients)
