Added front matter to disable the edit this page button.

--- a/docs/operate/redis-at-scale/high-availability/basic-replication/index-basic-replication.mdx
+++ b/docs/operate/redis-at-scale/high-availability/basic-replication/index-basic-replication.mdx
@@ -3,6 +3,7 @@ id: index-basic-replication
 title: 3.1 Basic Replication
 sidebar_label: 3.1 Basic Replication
 slug: /operate/redis-at-scale/high-availability/basic-replication
+isEditable: false
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
