--- a/docs/operate/redis-at-scale/high-availability/introduction/index-index-introduction.mdx
+++ b/docs/operate/redis-at-scale/high-availability/introduction/index-index-introduction.mdx
@@ -3,6 +3,7 @@ id: index-introduction
 title: 3.0 Introduction to High Availability
 sidebar_label: 3.0 Introduction to High Availability
 slug: /operate/redis-at-scale/high-availability/introduction
+isEditable: false
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
