--- a/docs/operate/redis-at-scale/observability/data-points-in-redis/index-data-points-in-redis.mdx
+++ b/docs/operate/redis-at-scale/observability/data-points-in-redis/index-data-points-in-redis.mdx
@@ -3,6 +3,7 @@ id: index-data-points-in-redis
 title: 5.1 Data points in Redis
 sidebar_label: 5.1 Data points in Redis
 slug: /operate/redis-at-scale/observability/data-points-in-redis
+isEditable: false
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
