--- a/docs/operate/redis-at-scale/observability/exercise-1/index-exercise-1.mdx
+++ b/docs/operate/redis-at-scale/observability/exercise-1/index-exercise-1.mdx
@@ -3,6 +3,7 @@ id: index-exercise-1
 title: 5.2 Getting Redis Statistics
 sidebar_label: 5.2 Getting Redis Statistics
 slug: /operate/redis-at-scale/observability/exercise-1
+isEditable: false
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
