--- a/docs/operate/redis-at-scale/observability/index-observability.mdx
+++ b/docs/operate/redis-at-scale/observability/index-observability.mdx
@@ -4,6 +4,7 @@ title: Ensuring Observability in Redis
 sidebar_label: Observability
 slug: /operate/redis-at-scale/observability
 authors: [justin]
+isEditable: false
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
