--- a/docs/operate/redis-at-scale/observability/introduction/index-introduction.mdx
+++ b/docs/operate/redis-at-scale/observability/introduction/index-introduction.mdx
@@ -3,6 +3,7 @@ id: index-introduction
 title: 5.0 Introduction to Observability
 sidebar_label: 5.0 Introduction to Observability
 slug: /operate/redis-at-scale/observability/introduction
+isEditable: false
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
