--- a/docs/operate/redis-at-scale/persistence-and-durability/introduction/index-introduction.mdx
+++ b/docs/operate/redis-at-scale/persistence-and-durability/introduction/index-introduction.mdx
@@ -3,6 +3,7 @@ id: index-introduction
 title: '2.0 Introduction to Persistence and Durability'
 sidebar_label: 2.0 Introduction to Persistence and Durability'
 slug: /operate/redis-at-scale/persistence-and-durability/introduction
+isEditable: false
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
