--- a/docs/operate/redis-at-scale/scalability/clustering-in-redis/index-scalability.mdx
+++ b/docs/operate/redis-at-scale/scalability/clustering-in-redis/index-scalability.mdx
@@ -4,6 +4,7 @@ title: 4.0 Clustering In Redis
 sidebar_label: 4.0 Clustering In Redis
 slug: /operate/redis-at-scale/scalability/lustering-in-redis
 authors: [justin]
+isEditable: false
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
