--- a/docs/operate/redis-at-scale/scalability/exercise-1/index-exercise-1.mdx
+++ b/docs/operate/redis-at-scale/scalability/exercise-1/index-exercise-1.mdx
@@ -3,6 +3,7 @@ id: index-exercise-1
 title: 4.1 Exercise - Creating a Redis Cluster
 sidebar_label: 4.1 Exercise - Creating a Redis Cluster
 slug: /operate/redis-at-scale/scalability/exercise-1
+isEditable: false
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
