--- a/docs/operate/redis-at-scale/talking-to-redis/client-performance-improvements/index-client-performance-improvements.mdx
+++ b/docs/operate/redis-at-scale/talking-to-redis/client-performance-improvements/index-client-performance-improvements.mdx
@@ -3,6 +3,7 @@ id: index-client-performance-improvements
 title: 1.4 Client Performance Improvements
 sidebar_label: 1.4 Client Performance Improvements
 slug: /operate/redis-at-scale/talking-to-redis/client-performance-improvements
+isEditable: false
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
