--- a/docs/operate/redis-at-scale/talking-to-redis/command-line-tool/index-command-line-tool.mdx
+++ b/docs/operate/redis-at-scale/talking-to-redis/command-line-tool/index-command-line-tool.mdx
@@ -3,6 +3,7 @@ id: index-command-line-tool
 title: '1.1 The Command Line Tool: Redis-CLI'
 sidebar_label: '1.1 The Command Line Tool: Redis-CLI'
 slug: /operate/redis-at-scale/talking-to-redis/command-line-tool
+isEditable: false
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
