--- a/docs/operate/redis-at-scale/talking-to-redis/configuring-a-redis-server/index-configuring-a-redis-server.mdx
+++ b/docs/operate/redis-at-scale/talking-to-redis/configuring-a-redis-server/index-configuring-a-redis-server.mdx
@@ -3,6 +3,7 @@ id: index-configuring-a-redis-server
 title: 1.2 Configuring a Redis Server
 sidebar_label: 1.2 Configuring a Redis Server
 slug: /operate/redis-at-scale/talking-to-redis/configuring-a-redis-server
+isEditable: false
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
