--- a/docs/operate/redis-at-scale/talking-to-redis/initial-tuning/index-initial-tuning.mdx
+++ b/docs/operate/redis-at-scale/talking-to-redis/initial-tuning/index-initial-tuning.mdx
@@ -3,6 +3,7 @@ id: index-initial-tuning
 title: 1.5 Initial Tuning
 sidebar_label: 1.5 Initial Tuning
 slug: /operate/redis-at-scale/talking-to-redis/initial-tuning
+isEditable: false
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
