--- a/docs/operate/redis-at-scale/talking-to-redis/redis-server-overview/index-redis-server-overview.mdx
+++ b/docs/operate/redis-at-scale/talking-to-redis/redis-server-overview/index-redis-server-overview.mdx
@@ -3,6 +3,7 @@ id: index-redis-server-overview
 title: 1.0 Redis Server Overview
 sidebar_label: 1.0 Redis Server Overview
 slug: /operate/redis-at-scale/talking-to-redis/redis-server-overview
+isEditable: false
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
