--- a/docs/operate/redis-at-scale/high-availability/exercise-1/index-exercise-1.mdx
+++ b/docs/operate/redis-at-scale/high-availability/exercise-1/index-exercise-1.mdx
@@ -3,6 +3,7 @@ id: index-exercise-1
 title: 3.2 Exercise - Enabling Basic Replication
 sidebar_label: 3.2 Exercise - Enabling Basic Replication
 slug: /operate/redis-at-scale/high-availability/exercise-1
+isEditable: false
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
