--- a/docs/operate/redis-at-scale/high-availability/exercise-2/index-exercise-2.mdx
+++ b/docs/operate/redis-at-scale/high-availability/exercise-2/index-exercise-2.mdx
@@ -3,6 +3,7 @@ id: index-exercise-2
 title: 3.4 Exercise - Sentinel Hands-on
 sidebar_label: 3.4 Exercise - Sentinel Hands-on
 slug: /operate/redis-at-scale/high-availability/exercise-2
+isEditable: false
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
