--- a/docs/operate/redis-at-scale/high-availability/index-high-availability.mdx
+++ b/docs/operate/redis-at-scale/high-availability/index-high-availability.mdx
@@ -4,6 +4,7 @@ title: Ensuring High Availability in Redis
 sidebar_label: High Availability
 slug: /operate/redis-at-scale/high-availability
 authors: [justin]
+isEditable: false
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
