--- a/docs/operate/redis-at-scale/index-redis-at-scale.mdx
+++ b/docs/operate/redis-at-scale/index-redis-at-scale.mdx
@@ -4,6 +4,7 @@ title: Introduction to Running Redis at Scale
 sidebar_label: Overview
 slug: /operate/redis-at-scale
 authors: [justin, elena, kurt]
+isEditable: false
 ---
 
 import RedisCard from '@site/src/theme/RedisCard';
