--- a/docs/operate/redis-at-scale/observability/identifying-issues/index-identifying-issues.mdx
+++ b/docs/operate/redis-at-scale/observability/identifying-issues/index-identifying-issues.mdx
@@ -3,6 +3,7 @@ id: index-identifying-issues
 title: 5.3 Identifying Issues
 sidebar_label: 5.3 Identifying Issues
 slug: /operate/redis-at-scale/observability/identifying-issues
+isEditable: false
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
