--- a/docs/operate/redis-at-scale/scalability/index-scalability.mdx
+++ b/docs/operate/redis-at-scale/scalability/index-scalability.mdx
@@ -4,6 +4,7 @@ title: Ensuring Scalability in Redis
 sidebar_label: Scalability
 slug: /operate/redis-at-scale/scalability
 authors: [justin]
+isEditable: false
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
