--- a/docs/operate/redis-at-scale/talking-to-redis/redis-clients/index-redis-clients.mdx
+++ b/docs/operate/redis-at-scale/talking-to-redis/redis-clients/index-redis-clients.mdx
@@ -3,6 +3,7 @@ id: index-redis-clients
 title: 1.3 Redis Clients
 sidebar_label: 1.3 Redis Clients
 slug: /operate/redis-at-scale/talking-to-redis/redis-clients
+isEditable: false
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
