--- a/docs/create/redis-functions/index-redis-functions.mdx
+++ b/docs/create/redis-functions/index-redis-functions.mdx
@@ -8,7 +8,7 @@ authors: [elena]
 
 # Getting started with Redis Functions
 
-The most impactful addition to Redis version 7.0 is **Redis Functions** - a new programmability option, improving on scripts by **adding modularity, reusability and better overall developer experience**. 
+The most impactful addition to Redis version 7.0 is **Redis Functions** - a new programmability option, improving on scripts by **adding modularity, reusability, and better overall developer experience**. 
 
 Functions are, in contrast to scripts, persisted in the .rdb and .aof files as well as automatically replicated to all the replicas, which makes them a first-class citizen of Redis.
 
