--- a/docs/create/redis-functions/index-redis-functions.mdx
+++ b/docs/create/redis-functions/index-redis-functions.mdx
@@ -531,7 +531,7 @@ redis.register_function{
 ```
 
 
-Finally this will give us the expected result:
+Finally, this will give us the expected result:
 
 
 ```
