--- a/docs/create/from-source/index-from-source.mdx
+++ b/docs/create/from-source/index-from-source.mdx
@@ -15,7 +15,7 @@ The Redis source code is available to download [here](https://download.redis.io/
 
  
 ```
-wget http://download.redis.io/redis-stable.tar.gz
+wget https://download.redis.io/redis-stable.tar.gz
 tar xvzf redis-stable.tar.gz
 cd redis-stable
 make
