--- a/docs/create/from-source/index-from-source.mdx
+++ b/docs/create/from-source/index-from-source.mdx
@@ -34,7 +34,7 @@ The binaries that are now compiled are available in the src directory.
 
 ### Step 2: Running Redis Server
 
-Install Redis server by running the following redis command:
+Install the Redis server by running the following command:
  
 ```
 $ redis-server
