--- a/docs/create/from-source/index-from-source.mdx
+++ b/docs/create/from-source/index-from-source.mdx
@@ -43,7 +43,7 @@ Please note that you don't need to restart the Redis service.
 
 ### Step 3: Interacting with Redis Client
 
-Once the redis installation gets completed, you can use redis client software to perform the remote connection to the redis instance.
+Once the Redis installation has completed, you can use the Redis client to connect to the Redis server.
 Use the below redis cli command to SET and GET the data values:
 ```
 $ src/redis-cli
