--- a/docs/create/from-source/index-from-source.mdx
+++ b/docs/create/from-source/index-from-source.mdx
@@ -44,7 +44,7 @@ Please note that you don't need to restart the Redis service.
 ### Step 3: Interacting with Redis Client
 
 Once the Redis installation has completed, you can use the Redis client to connect to the Redis server.
-Use the below redis cli command to SET and GET the data values:
+Use the following commands to store and retrieve a string:
 ```
 $ src/redis-cli
 redis> set foo bar
