--- a/docs/create/from-source/index-from-source.mdx
+++ b/docs/create/from-source/index-from-source.mdx
@@ -53,7 +53,7 @@ redis> get foo
 "bar"
 ```
 
-The redis.conf is a configuration file recommended in case you want to configure Redis.
+`redis.conf` is the Redis configuration file, used to configure the behavior of the Redis Server.  For more information on the available configuration options, check out the [documentation on redis.io](https://redis.io/docs/manual/config/).
 
 
 ### Next Step
