--- a/docs/howtos/security/tls.mdx
+++ b/docs/howtos/security/tls.mdx
@@ -94,7 +94,7 @@ openssl req \
 
 ```
 
-This command generate a new client key (`client_key_001.pem`) and certificate (`client_cert_001.pem`) with no passphrase.
+This command generates a new client key (`client_key_001.pem`) and certificate (`client_cert_001.pem`) with no passphrase.
 
 
 ## Step 4. Configure the Redis Database
