--- a/docs/howtos/security/tls.mdx
+++ b/docs/howtos/security/tls.mdx
@@ -39,7 +39,7 @@ In this article, we will focus on the Two-Way SSL, and using Redis Enterprise.
 
 ## Step 1. Run a Redis server
 
-You can either run Redis server in a Docker container or directly on your machine. Follow the below command to setup a Redis server locally on Mac OS:
+You can either run Redis server in a Docker container or directly on your machine. Use the following commands to setup a Redis server locally on Mac OS:
 
 ```
  brew tap redis-stack/redis-stack
